# my-hood

./: .gitignore  LICENSE.md  README.md
.github/workflows/: ci.yml
client/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/dashboard/transactions/: page.tsx
client/src/app/lib/: definitions.ts
client/src/app/ui/: fonts.ts  logo.tsx
client/src/app/ui/dashboard/: nav-links.tsx  sidenav.tsx
server/: .env.example  Cargo.toml  README.md  docker-compose.yaml  recreate_db.sh
server/migrations/: 20230426204303_initial-tables.down.sql  20230426204303_initial-tables.sql  20230426204303_initial-tables.up.sql
server/src/: config.rs  db.rs  error.rs  graphql.rs  lib.rs  main.rs  oauth.rs  schema.rs  token.rs  utils.rs
server/src/association/: graphql.rs  model.rs
server/src/field/: graphql.rs  mod.rs  model.rs  rules.rs
server/src/relations/: graphql.rs  model.rs
server/src/transaction/: graphql.rs  model.rs
server/src/user/: graphql.rs  mod.rs  model.rs
server/tests/: admin.rs  lib.rs  queries.rs  reservation.rs  test.rs  test_utils.rs  user.rs
