[package]
name = "my-hood-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
async-graphql-value = "7.0.2"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", default-features = false, features = ["migrate", "macros", "sqlite", "postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json", "bigdecimal"] } 
serde = "1.0"
anyhow = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
serde_json = "1.0"
async-graphql = { version = "7.0.2", features = ["chrono", "uuid", "bigdecimal"] }
async-graphql-axum = "7.0.2"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
reqwest = { version = "0.11.20", features = ["json"] }
jsonwebtoken = "8.3.0"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
mime = "0.3.17"