[package]
name = "my-hood-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
async-trait = "0.1.86"
async-graphql-value = "7.0.15"
bcrypt = "0.17.0"
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
sqlx = { version = "0.8.3", default-features = false, features = ["migrate", "macros", "sqlite", "postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json", "bigdecimal"] } 
serde = "1.0"
anyhow = "1.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
serde_json = "1.0"
async-graphql = { version = "7.0.15", features = ["chrono", "uuid", "bigdecimal"] }
async-graphql-axum = "7.0.15"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.2", features = ["serde", "v4"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json"] }
jsonwebtoken = "9.3.1"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.3.1"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
mime = "0.3.17"
